--- a/about/index.html
+++ b/about/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html >
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -9,39 +9,51 @@
 </head>
 <body>
 <h1>Привет! Меня зовут Шульга Семён!</h1>
-<p><img src="./images/foto.jpg"  width="250" height="330" alt="моё фото">  <mark>Мне 29 лет. Живу в городе Новополоцке. Работаю на ОАО "Нафтан" завод Полимир, слесарем.</mark>
-    <a href="mailto:zenkov241091@gmail.com" target="_blank">Моя почта</a> <a href="https://github.com/SimonSchulz/" target="_blank">GitHub</a>
+<p><img src="./images/foto.jpg" width="250" height="330" alt="моё фото">
+    <mark>Мне 29 лет. Живу в городе Новополоцке. Работаю на ОАО "Нафтан" завод Полимир, слесарем.</mark>
+    <a href="mailto:zenkov241091@gmail.com" target="_blank">Моя почта</a> <a href="https://github.com/SimonSchulz/"
+                                                                             target="_blank">GitHub</a>
 </p>
 <hr>
 <br>
 <h2>Образование:</h2>
 <ol>
-    <li> <em>2000-2007 гг.</em> - Средняя школа №14</li>
-    <li> <em>2007-2011</em> - Новополоцкий политехнический колледж. Специальность - <strong>техник-механик</strong> </li>
-    <li> <em>2017 - настоящее время</em> - Полоцкий государственный университет. Специальность - <strong>инженер-программист</strong></li>
+    <li><em>2000-2007 гг.</em> - Средняя школа №14</li>
+    <li><em>2007-2011</em> - Новополоцкий политехнический колледж. Специальность - <strong>техник-механик</strong></li>
+    <li><em>2017 - настоящее время</em> - Полоцкий государственный университет. Специальность - <strong>инженер-программист</strong>
+    </li>
 </ol>
 <hr>
 <br>
 <h3>Хобби:</h3>
-<p>Еще со школы увлекался интеллектуальными играми. Часто посещаю барные квизы и викторины в своем городе, такие как:</p>
+<p>Еще со школы увлекался интеллектуальными играми. Часто посещаю барные квизы и викторины в своем городе, такие
+    как:</p>
 <ul>
     <li><b>Mindstorm</b></li>
     <li><b>Мозгобойня</b></li>
     <li><b>Эйнштейн пати</b></li>
     <li><b>Newton quiz</b></li>
-    <li><b><del>pub quiz</del></b></li>
+    <li><b>
+        <del>pub quiz</del>
+    </b></li>
 </ul>
-<p>Вот уже несколько лет увлекаюсь программированием. В университете и самостоятельно изучал такие языки как <ins>Java</ins> <ins>C++</ins> <ins>C#</ins>,
-    искал курсы при компаниях с последующим трудоустройством, однако не нашел, поэтому со временем начал интересоваться <b>front-end</b></p>
-<p>Люблю постоянно развиваться, учить что-то новое. Предыдущие годы изучал иностранные языки. Имею <b>международный сертификат по немецкому языку уровня А2</b>, а также
-<b>сертификаты из языкового центра ПГУ, по немецкому и английскому уровня B1</b></p>
+<p>Вот уже несколько лет увлекаюсь программированием. В университете и самостоятельно изучал такие языки как
+    <ins>Java</ins>
+    <ins>C++</ins>
+    <ins>C#</ins>
+    ,
+    искал курсы при компаниях с последующим трудоустройством, однако не нашел, поэтому со временем начал интересоваться
+    <b>front-end</b></p>
+<p>Люблю постоянно развиваться, учить что-то новое. Предыдущие годы изучал иностранные языки. Имею <b>международный
+    сертификат по немецкому языку уровня А2</b>, а также
+    <b>сертификаты из языкового центра ПГУ, по немецкому и английскому уровня B1</b></p>
 <h3>Моими сильными качествами считаю:</h3>
 <ul>
-<li>Самостоятельность</li>
-<li>Настойчивость</li>
-<li>Трудолюбие</li>
-<li>Ответственность</li>
-<li>Быстрая обучаемость</li>
+    <li>Самостоятельность</li>
+    <li>Настойчивость</li>
+    <li>Трудолюбие</li>
+    <li>Ответственность</li>
+    <li>Быстрая обучаемость</li>
 </ul>
 <br>
 <hr>
