--- a/about/index.html
+++ b/about/index.html
@@ -44,9 +44,9 @@
     ,
     искал курсы при компаниях с последующим трудоустройством, однако не нашел, поэтому со временем начал интересоваться
     <b>front-end</b></p>
-<p>Люблю постоянно развиваться, учить что-то новое. Предыдущие годы изучал иностранные языки. Имею <b>международный
+<p>Люблю постоянно развиваться, учить что-то новое&#129317. Предыдущие годы изучал иностранные языки&#129322. Имею <b>международный
     сертификат по немецкому языку уровня А2</b>, а также
-    <b>сертификаты из языкового центра ПГУ, по немецкому и английскому уровня B1</b></p>
+    <b>сертификаты из языкового центра ПГУ, по немецкому и английскому уровня B1 &#129300</b></p>
 <h3>Моими сильными качествами считаю:</h3>
 <ul>
     <li>Самостоятельность</li>
