--- a/index.html
+++ b/index.html
@@ -30,15 +30,18 @@
     </style>
 </head>
 <body>
-<h1>Привет! Меня зовут Шульга Семён!</h1>
-<p><img src="./about/images/foto.jpg" width="250" height="330" alt="моё фото">
+<h1>Моя первая страница</h1>
+<p>Более подробно <a href='./about/index.html'>об авторе</a></p>
+<img src="./about/images/1.jpg" width="700" height="500" alt="картинка">
+<p>
     <mark>Мне 29 лет. Живу в городе Новополоцке. Работаю на ОАО "Нафтан" завод Полимир, слесарем.</mark>
-    <p>Мои контакты:</p>
-    <a href="mailto:zenkov241091@gmail.com" target="_blank">zenkov241091@gmail.com</a>
-    <br>
-    <a href="https://github.com/SimonSchulz/" target="_blank">github.com/SimonSchulz/</a>
-    <br>
-    <a href="tel:+375333610660">+375333610660</a>
+</p>
+<p>Мои контакты:</p>
+<a href="mailto:zenkov241091@gmail.com" target="_blank">zenkov241091@gmail.com</a>
+<br>
+<a href="https://github.com/SimonSchulz/" target="_blank">github.com/SimonSchulz/</a>
+<br>
+<a href="tel:+375333610660">+375333610660</a>
 <hr>
 <br>
 <p>Вот уже несколько лет увлекаюсь программированием. В университете и самостоятельно изучал такие языки как
