--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <hr>
         <div class="flex">
             <div class="item">
-               <div class="img_block"> <img src="images/headphones%20.png" alt="support"></div>
+                <div class="img_block"><img src="images/headphones%20.png" alt="support"></div>
                 <div class="text_block">
                     Support 24/7
                 </div>
@@ -36,7 +36,7 @@
                 </div>
             </div>
             <div class="item">
-                <div class="img_block"> <img src="images/like.png" alt="reviews"></div>
+                <div class="img_block"><img src="images/like.png" alt="reviews"></div>
                 <div class="text_block">
                     Real guest reviews
                 </div>
@@ -47,6 +47,44 @@
 <section class="hotels">
     <div class="container">
         <h2>Homes guests loves</h2>
+        <div class="flex_hotels">
+            <div class="item_hotels">
+                <div class="img_block2"><img src="images/Rectangle%2048.jpg" alt="support" width="296"></div>
+                <div class="text_block2_1">
+                    Hotel Leopold
+                </div>
+                <div class="text_block2_2">
+                    Saint Petersburg, Russia
+                </div>
+            </div>
+            <div class="item_hotels">
+                <div class="img_block2"><img src="images/Rectangle%2049.jpg" alt="message"></div>
+                <div class="text_block2_1">
+                    Apartment Sunshine
+                </div>
+                <div class="text_block2_2">
+                    Santa  Cruz de Tenerife, Spain
+                </div>
+            </div>
+            <div class="item_hotels">
+                <div class="img_block2"><img src="images/Rectangle%2050.jpg" alt="booking"></div>
+                <div class="text_block2_1">
+                    Villa Kunerad
+                </div>
+                <div class="text_block2_2">
+                    Vysokie Tatry, Slowakia
+                </div>
+            </div>
+            <div class="item_hotels">
+                <div class="img_block2"><img src="images/Rectangle%2051.jpg" alt="reviews"></div>
+                <div class="text_block2_1">
+                    Hostel Friendship
+                </div>
+                <div class="text_block2_2">
+                    Berlin, Germany
+                </div>
+            </div>
+        </div>
     </div>
 </section>
 </body>
