--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 <section class="header">
-    <div class="container"></div>
+    <div class="container">
+        <h1>Discover stays to live, work or just relax</h1>
+    </div>
 </section>
 <section class="offer">
     <div class="container">
@@ -49,7 +51,7 @@
         <h2>Homes guests loves</h2>
         <div class="flex_hotels">
             <div class="item_hotels">
-                <div class="img_block2"><img src="images/Rectangle%2048.jpg" alt="support" width="296"></div>
+                <div class="img_block2"><img src="images/Rectangle%2048.jpg" alt="Hotel" width="296"></div>
                 <div class="text_block2_1">
                     Hotel Leopold
                 </div>
@@ -58,16 +60,16 @@
                 </div>
             </div>
             <div class="item_hotels">
-                <div class="img_block2"><img src="images/Rectangle%2049.jpg" alt="message"></div>
+                <div class="img_block2"><img src="images/Rectangle%2049.jpg" alt="Apartment"></div>
                 <div class="text_block2_1">
                     Apartment Sunshine
                 </div>
                 <div class="text_block2_2">
-                    Santa  Cruz de Tenerife, Spain
+                    Santa Cruz de Tenerife, Spain
                 </div>
             </div>
             <div class="item_hotels">
-                <div class="img_block2"><img src="images/Rectangle%2050.jpg" alt="booking"></div>
+                <div class="img_block2"><img src="images/Rectangle%2050.jpg" alt="Villa"></div>
                 <div class="text_block2_1">
                     Villa Kunerad
                 </div>
@@ -76,7 +78,7 @@
                 </div>
             </div>
             <div class="item_hotels">
-                <div class="img_block2"><img src="images/Rectangle%2051.jpg" alt="reviews"></div>
+                <div class="img_block2"><img src="images/Rectangle%2051.jpg" alt="Hostel"></div>
                 <div class="text_block2_1">
                     Hostel Friendship
                 </div>
@@ -84,6 +86,51 @@
                     Berlin, Germany
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+<section class="destinations">
+    <div class="container">
+        <h2>The best destinations</h2>
+        <div class="btn-group">
+            <button name="regions">Regions</button>
+            <button name="cities">Cities</button>
+            <button name="places">Places of interest</button>
+        </div>
+        <div class="flex_dest">
+            <div class="item_dest">
+                <div class="img_block2"><img src="images/mald.jpg" alt="Maldives"></div>
+                <div class="text_block2_1">
+                    Maldives
+                </div>
+            </div>
+            <div class="item_dest">
+                <div class="img_block2"><img src="images/spain.jpg" alt="Spain"></div>
+                <div class="text_block2_1">
+                    Spain
+                </div>
+            </div>
+            <div class="item_dest">
+                <div class="img_block2"><img src="images/Norway.jpg" alt="Norway"></div>
+                <div class="text_block2_1">
+                    Norway
+                </div>
+            </div>
+            <div class="item_dest">
+                <div class="img_block2"><img src="images/island.jpg" alt="Island"></div>
+                <div class="text_block2_1">
+                    Island
+                </div>
+            </div>
+        </div>
+        <button class="rnd_btn">></button>
+        <div class="btm-section">
+            <div class="img_round"><img src="./images/Group.png" alt="group"></div>
+            <div class="btm_block">
+                <div class="btm_text">Sign up and get 20% off your first booking</div>
+                <button class="btm_btn">sign up</button>
+            </div>
+            <div class="vector"><img src="/images/Vector.png" alt="vector"></div>
         </div>
     </div>
 </section>
