--- a/index.html
+++ b/index.html
@@ -134,5 +134,33 @@
         </div>
     </div>
 </section>
+<section class="footer">
+    <div class="container">
+        <div class="main_foot_block">
+            <div class="footer_text_block">
+                <div>About</div>
+                <div>How Triphouse works</div>
+                <div>Careers</div>
+                <div>Privacy</div>
+                <div>Terms</div>
+            </div>
+            <div class="footer_text_block">
+                <div>Property types</div>
+                <div>Guest houses</div>
+                <div>Hotels</div>
+                <div>Apartments</div>
+                <div>Villas</div>
+                <div>Holiday homes</div>
+                <div>Hostels</div>
+            </div>
+            <div class="footer_text_block">
+                <div>Support</div>
+                <div>Contact Customer Service</div>
+                <div>FAQ</div>
+            </div>
+        </div>
+        <div class="sign">© 2020 Triphouse, Inc. All rights reserved</div>
+    </div>
+</section>
 </body>
 </html>
