fixed and optimÑized

--- a/index.html
+++ b/index.html
@@ -1,45 +1,45 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>TripHouse</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
 <section class="header">
     <div class="container">
-        <h1>Discover stays to live, work or just relax</h1>
+        <h1>Discover stays <br>to live, work or just relax</h1>
     </div>
 </section>
-<section class="offer">
+<section class="offer ">
     <div class="container">
         <h2>What do we offer</h2>
         <hr>
-        <div class="flex">
-            <div class="item">
-                <div class="img_block"><img src="images/headphones%20.png" alt="support"></div>
-                <div class="text_block">
+        <div class="offer_main">
+            <div class="offer_item">
+                <div class="offer_item_img"><img class="offer_icon" src="images/headphones.png" alt="support"></div>
+                <div class="offer_item_text">
                     Support 24/7
                 </div>
             </div>
-            <div class="item">
-                <div class="img_block"><img src="images/message.png" alt="message"></div>
-                <div class="text_block">
+            <div class="offer_item">
+                <div class="offer_item_img"><img class="offer_icon" src="images/message.png" alt="message"></div>
+                <div class="offer_item_text">
                     Communicate directly
                 </div>
             </div>
-            <div class="item">
-                <div class="img_block"><img src="images/book.png" alt="booking"></div>
-                <div class="text_block">
+            <div class="offer_item">
+                <div class="offer_item_img"><img class="offer_icon" src="images/booking.png" alt="booking"></div>
+                <div class="offer_item_text">
                     Book online
                 </div>
             </div>
-            <div class="item">
-                <div class="img_block"><img src="images/like.png" alt="reviews"></div>
-                <div class="text_block">
+            <div class="offer_item">
+                <div class="offer_item_img"><img class="offer_icon" src="images/like.png" alt="reviews"></div>
+                <div class="offer_item_text">
                     Real guest reviews
                 </div>
             </div>
@@ -49,40 +49,40 @@
 <section class="hotels">
     <div class="container">
         <h2>Homes guests loves</h2>
-        <div class="flex_hotels">
-            <div class="item_hotels">
-                <div class="img_block2"><img src="images/Rectangle%2048.jpg" alt="Hotel" width="296"></div>
-                <div class="text_block2_1">
+        <div class="hotels_main">
+            <div class="hotels_item">
+                <div class="hotels_item_img"><img src="images/Rectangle%2048.jpg" alt="Hotel" width="296"></div>
+                <div class="hotel_item_name">
                     Hotel Leopold
                 </div>
-                <div class="text_block2_2">
+                <div class="hotel_item_place">
                     Saint Petersburg, Russia
                 </div>
             </div>
-            <div class="item_hotels">
-                <div class="img_block2"><img src="images/Rectangle%2049.jpg" alt="Apartment"></div>
-                <div class="text_block2_1">
+            <div class="hotels_item">
+                <div class="hotels_item_img"><img src="images/Rectangle%2049.jpg" alt="Apartment"></div>
+                <div class="hotel_item_name">
                     Apartment Sunshine
                 </div>
-                <div class="text_block2_2">
+                <div class="hotel_item_place">
                     Santa Cruz de Tenerife, Spain
                 </div>
             </div>
-            <div class="item_hotels">
-                <div class="img_block2"><img src="images/Rectangle%2050.jpg" alt="Villa"></div>
-                <div class="text_block2_1">
+            <div class="hotels_item">
+                <div class="hotels_item_img"><img src="images/Rectangle%2050.jpg" alt="Villa"></div>
+                <div class="hotel_item_name">
                     Villa Kunerad
                 </div>
-                <div class="text_block2_2">
+                <div class="hotel_item_place">
                     Vysokie Tatry, Slowakia
                 </div>
             </div>
-            <div class="item_hotels">
-                <div class="img_block2"><img src="images/Rectangle%2051.jpg" alt="Hostel"></div>
-                <div class="text_block2_1">
+            <div class="hotels_item">
+                <div class="hotels_item_img"><img src="images/Rectangle%2051.jpg" alt="Hostel"></div>
+                <div class="hotel_item_name">
                     Hostel Friendship
                 </div>
-                <div class="text_block2_2">
+                <div class="hotel_item_place">
                     Berlin, Germany
                 </div>
             </div>
@@ -97,70 +97,71 @@
             <button name="cities">Cities</button>
             <button name="places">Places of interest</button>
         </div>
-        <div class="flex_dest">
+        <div class="destinations_main">
             <div class="item_dest">
-                <div class="img_block2"><img src="images/mald.jpg" alt="Maldives"></div>
-                <div class="text_block2_1">
+                <img class="img_block2" src="images/mald.jpg" alt="Maldives">
+                <div class="destinations_item_name">
                     Maldives
                 </div>
             </div>
             <div class="item_dest">
-                <div class="img_block2"><img src="images/spain.jpg" alt="Spain"></div>
-                <div class="text_block2_1">
+                <img class="img_block2" src="images/spain.jpg" alt="Spain">
+                <div class="destinations_item_name">
                     Spain
                 </div>
             </div>
             <div class="item_dest">
-                <div class="img_block2"><img src="images/Norway.jpg" alt="Norway"></div>
-                <div class="text_block2_1">
+                <img class="img_block2" src="images/Norway.jpg" alt="Norway">
+                <div class="destinations_item_name">
                     Norway
                 </div>
             </div>
             <div class="item_dest">
-                <div class="img_block2"><img src="images/island.jpg" alt="Island"></div>
-                <div class="text_block2_1">
+                <img class="img_block2" src="images/island.jpg" alt="Island">
+                <div class="destinations_item_name">
                     Island
                 </div>
             </div>
         </div>
-        <button class="rnd_btn">></button>
-        <div class="btm-section">
-            <div class="img_round"><img src="./images/Group.png" alt="group"></div>
-            <div class="btm_block">
-                <div class="btm_text">Sign up and get 20% off your first booking</div>
-                <button class="btm_btn">sign up</button>
-            </div>
-            <div class="vector"><img src="/images/Vector.png" alt="vector"></div>
-        </div>
+        <button class="rnd_btn"><img src="images/Polygon%202.png" alt=""></button>
     </div>
 </section>
-<section class="footer">
-    <div class="container">
-        <div class="main_foot_block">
-            <div class="footer_text_block">
-                <div>About</div>
-                <div>How Triphouse works</div>
-                <div>Careers</div>
-                <div>Privacy</div>
-                <div>Terms</div>
-            </div>
-            <div class="footer_text_block">
-                <div>Property types</div>
-                <div>Guest houses</div>
-                <div>Hotels</div>
-                <div>Apartments</div>
-                <div>Villas</div>
-                <div>Holiday homes</div>
-                <div>Hostels</div>
-            </div>
-            <div class="footer_text_block">
-                <div>Support</div>
-                <div>Contact Customer Service</div>
-                <div>FAQ</div>
-            </div>
-        </div>
-        <div class="sign">© 2020 Triphouse, Inc. All rights reserved</div>
+<section class="container">
+    <div class="btm-section">
+    <div class="img_round"><img src="./images/Group.png" alt="group"></div>
+    <div class="btm_block">
+        <div class="btm_text">Sign up and get 20% off your first booking</div>
+        <button class="btm_btn">sign up</button>
     </div>
+    <div class="vector"><img src="/images/Vector.png" alt="vector"></div>
+    </div>
+</section>
+
+<section class="footer">
+    <div class="main_foot_block container">
+        <ul class="footer_text_block">
+            <li><a href="#">About</a></li>
+            <li><a href="#">How Triphouse works</a></li>
+            <li><a href="#">Careers</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Terms</a></li>
+        </ul>
+        <ul class="footer_text_block">
+            <li><a href="#">Property types</a></li>
+            <li><a href="#">Guest houses</a></li>
+            <li><a href="#">Hotels</a></li>
+            <li><a href="#">Apartments</a></li>
+            <li><a href="#">Villas</a></li>
+            <li><a href="#">Holiday homes</a></li>
+            <li><a href="#">Hostels</a></li>
+        </ul>
+        <ul class="footer_text_block">
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Contact Customer Service</a></li>
+            <li><a href="#">FAQ</a></li>
+        </ul>
+    </div>
+    <div class="sign container">© 2020 Triphouse, Inc. All rights reserved</div>
 </section>
 </body>
 </html>
