header and offer adaptive

--- a/index.html
+++ b/index.html
@@ -11,7 +11,30 @@
 <body>
 <section class="header">
     <div class="container">
+        <header class="header_nav">
+            <div class="logo"><img src="./images/logo_vector.svg" alt="logo"></div>
+            <div class="nav">
+                <nav>
+                    <a class="header_nav_link" href="">Stays</a>
+                    <a class="header_nav_link" href="">Attractions</a>
+                </nav>
+                <nav class="header_nav_img">
+                    <a href=""><img src="./images/Night.svg" alt="theme"></a>
+                    <a href=""><img src="./images/AccountCircle.svg" alt="sign_in"></a>
+                </nav>
+            </div>
+        </header>
         <h1>Discover stays <br>to live, work or just relax</h1>
+        <form class="header_form">
+            <input class="form_destinations" name="destination" type="text" placeholder="Your destination or hotel name">
+            <input class="calender" name="check-in" type="text" placeholder="Check-in — Check-out">
+            <input class="people_count" name="people_count" type="text" placeholder="Adults — Children — Room">
+            <button class="form_btn">Search</button>
+        </form>
+        <div class="header_store_links">
+            <a href=""><img src="./images/google-play-badge.png" alt="google_play"></a>
+            <a href=""><img src="./images/App_Store.svg" alt="app_store"></a>
+        </div>
     </div>
 </section>
 <section class="offer ">
@@ -128,12 +151,12 @@
 </section>
 <section class="container">
     <div class="btm-section">
-    <div class="img_round"><img src="./images/Group.png" alt="group"></div>
-    <div class="btm_block">
-        <div class="btm_text">Sign up and get 20% off your first booking</div>
-        <button class="btm_btn">sign up</button>
-    </div>
-    <div class="vector"><img src="/images/Vector.png" alt="vector"></div>
+        <div class="img_round"><img src="./images/Group.png" alt="group"></div>
+        <div class="btm_block">
+            <div class="btm_text">Sign up and get 20% off your first booking</div>
+            <button class="btm_btn">sign up</button>
+        </div>
+        <div class="vector"><img src="/images/Vector.png" alt="vector"></div>
     </div>
 </section>
 
