fix problems with font and mobile adaptive

--- a/index.html
+++ b/index.html
@@ -235,13 +235,13 @@
                         <a class="header_nav_link" href="">Attractions</a>
                     </nav>
                     <nav class="header_nav_img">
-                        <a href="">
-                            <svg width="30px" height="30px">
+                        <a href="#">
+                            <svg class="night_theme">
                                 <use href="#night_theme"></use>
                             </svg>
                         </a>
-                        <a href="">
-                            <svg width="40px" height="40px">
+                        <a href="#">
+                            <svg class="account_circle">
                                 <use href="#account_circle"></use>
                             </svg>
                         </a>
@@ -384,6 +384,7 @@
                 <button name="regions">Regions</button>
                 <button name="cities">Cities</button>
                 <button name="places">Places of interest</button>
+                <button name="places_mobile">Places</button>
             </div>
             <div class="destinations_main">
                 <div class="item_dest col-md-3 col-sm-4 col-xs-6">
