--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     </symbol>
     <symbol id="night_theme" viewBox="0 0 30 30">
         <path d="M25.6101 10.6101V4.38992H19.3899L15 0L10.6101 4.38992H4.38992V10.6101L0 15L4.38992 19.3899V25.6101H10.6101L15 30L19.3899 25.6101H25.6101V19.3899L30 15L25.6101 10.6101ZM15 22.9576C13.8196 22.9576 12.6923 22.6923 11.6844 22.2281C14.4164 20.9682 16.3263 18.2096 16.3263 15C16.3263 11.7905 14.4164 9.03183 11.6844 7.77188C12.6923 7.30769 13.8196 7.04244 15 7.04244C19.3899 7.04244 22.9576 10.6101 22.9576 15C22.9576 19.3899 19.3899 22.9576 15 22.9576Z"
-              fill="white"/>
+             />
     </symbol>
     <symbol id="account_circle" viewBox="0 0 40 40">
         <path d="M20 0C8.96 0 0 8.96 0 20C0 31.04 8.96 40 20 40C31.04 40 40 31.04 40 20C40 8.96 31.04 0 20 0ZM20 6C23.32 6 26 8.68 26 12C26 15.32 23.32 18 20 18C16.68 18 14 15.32 14 12C14 8.68 16.68 6 20 6ZM20 34.4C15 34.4 10.58 31.84 8 27.96C8.06 23.98 16 21.8 20 21.8C23.98 21.8 31.94 23.98 32 27.96C29.42 31.84 25 34.4 20 34.4Z"
-              fill="white"/>
+              />
     </symbol>
     <symbol id="loupe" viewBox="0 0 16 16">
         <path d="M11.4351 10.0629H10.7124L10.4563 9.81589C11.3528 8.77301 11.8925 7.4191 11.8925 5.94625C11.8925 2.66209 9.23042 0 5.94625 0C2.66209 0 0 2.66209 0 5.94625C0 9.23042 2.66209 11.8925 5.94625 11.8925C7.4191 11.8925 8.77301 11.3528 9.81589 10.4563L10.0629 10.7124V11.4351L14.6369 16L16 14.6369L11.4351 10.0629ZM5.94625 10.0629C3.66838 10.0629 1.82962 8.22413 1.82962 5.94625C1.82962 3.66838 3.66838 1.82962 5.94625 1.82962C8.22413 1.82962 10.0629 3.66838 10.0629 5.94625C10.0629 8.22413 8.22413 10.0629 5.94625 10.0629Z"
@@ -370,10 +370,10 @@
                     <div class="hotel_item_place">
                         Berlin, Germany
                     </div>
-                    <button class="rnd_btn_hotel">
-                        <img src="images/Polygon%201.png" alt="">
-                    </button>
                 </div>
+                <button class="rnd_btn_hotel">
+                    <img src="images/Polygon%201.svg" alt="">
+                </button>
             </div>
         </div>
     </section>
@@ -411,8 +411,12 @@
                         Island
                     </div>
                 </div>
+                <button class="rnd_btn_right">
+                    <img src="images/Polygon%201.svg" alt="">
+                </button>
             </div>
-            <button class="rnd_btn_dest"><img src="images/Polygon%202.png" alt=""></button>
+
+            <button class="rnd_btn_dest"><img src="images/Polygon%202.svg" alt=""></button>
         </div>
     </section>
     <section class="sign_up container">
